syntax = "proto3";

option java_multiple_files = true;
option java_package = "realworld.proto.internal";
option java_outer_classname = "StorageProto";

import 'google/protobuf/timestamp.proto';

package realworld.proto.internal;

/** === RESOURCES === */
message DbUser {
  string id = 1;
  string email = 2;
  string username = 3;
  string bio = 4;
  string image = 5;
  string password_hash = 6;
}

message DbArticle {
  string id = 1;
  string slug = 2;
  string title = 3;
  string description = 4;
  string body = 5;
  repeated string tag_list = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
  string author_id = 9;
}

message DbComment {
  string id = 1;
  string body = 2;
  google.protobuf.Timestamp created_at = 3;
  google.protobuf.Timestamp updated_at = 4;
  string author_id = 5;
}
